--- a/style.css
+++ b/style.css
@@ -34,3 +34,13 @@
 .button:hover {
     background-color: #320750;
 }
+
+.notification {
+    font-size: 16px;
+    color: white;
+    margin: 20px;
+}
+
+.notification_hide {
+    display: none;
+}
