--- a/style.css
+++ b/style.css
@@ -22,13 +22,18 @@
 }
 
 .button {
+    display: inline-block;
+    margin: 0 auto;
     outline: none;
     border: none;
     border-radius: 10px;
     background-color: #431a65;
     color: white;
-    padding: 15px;
+    width: 80px;
+    height: 45px;
+    padding: 14px;
     transition: all .1s;
+    text-align: center;
 }
 
 .button:hover {
